# SigmaBot

./: .env  .gitignore  Dockerfile  client.py  database.py  handlers.py  index.py  language.py  main.session  pyproject.toml  requirements.txt  server.py  views.py
.github/workflows/: main.yml
languages/: en.hjson  ru.hjson
