[tool.poetry]
name = "sigmabot"
version = "0.1.0"
description = ""
authors = ["l4blee <l4blee@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.35.0"
python-dotenv = "^1.0.1"
hjson = "^3.1.0"
motor = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
